--- a/src/Rebus.Configuration/Rebus.Configuration.Selectors/Rebus.Configuration.Selectors.csproj
+++ b/src/Rebus.Configuration/Rebus.Configuration.Selectors/Rebus.Configuration.Selectors.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="C:\Users\fwagner\source\Repos\dbosoft\rebus-extensions\src\Rebus.Configuration\Rebus.Configuration.Abstractions\Rebus.Configuration.Abstractions.csproj" />
+    <ProjectReference Include="..\Rebus.Configuration.Abstractions\Rebus.Configuration.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
