fixed missing license

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -14,6 +14,7 @@
     <RepositoryUrl>https://github.com/dbosoft/rebus-extensions</RepositoryUrl>
     <AssemblyName>Dbosoft.$(MSBuildProjectName)</AssemblyName>
     <Description>A extension to Rebus to configure transports and other settings via dependency injection.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RootNamespace>Dbosoft.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 
     <!-- Declare that the Repository URL can be published to NuSpec -->
