--- a/azure-piplines.yml
+++ b/azure-piplines.yml
@@ -31,8 +31,23 @@ steps:
   inputs:
     command: test
     projects: '**/*Tests/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"  --no-build'
-  
+    arguments: '--configuration $(buildConfiguration) --collect "XPlat Code Coverage"  --no-build'
+    publishTestResults: true
+
+# ReportGenerator extension to combine code coverage outputs into one
+- task: reportgenerator@4
+  inputs:
+    reports: '$(Agent.WorkFolder)/**/coverage.cobertura.xml'
+    targetdir: '$(Build.SourcesDirectory)/CoverageResults'
+
+# Publish the combined code coverage to the pipeline
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage report'
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '$(Build.SourcesDirectory)/CoverageResults/Cobertura.xml'
+    reportDirectory: '$(Build.SourcesDirectory)/CoverageResults'
+
 - task: DotNetCoreCLI@2
   displayName: dotnet pack
   inputs:
