--- a/test/Rebus.SimpleInjector.Tests/Rebus.SimpleInjector.Tests.csproj
+++ b/test/Rebus.SimpleInjector.Tests/Rebus.SimpleInjector.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentAssertions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
       <PackageReference Include="SimpleInjector.Integration.ServiceCollection" Version="5.4.0" />
     </ItemGroup>
